chore(app): final updates before holidays

--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     "prod:start:writable": "php ./bin/start --entry='./src/writable/main.php'",
     "prod:start:web:byterange": "php ./bin/start --entry='./src/web/byterange/main.php'",
     "prod:start:web:cats": "php ./bin/start --entry='./src/web/cats/main.php'",
-    "dev:start:web:cats": "php -dxdebug.mode=debug -dxdebug.start_with_request=yes ./bin/start --entry='./src/web/cats/main.php'",
     "prod:start:web:customattributes": "php ./bin/start --entry='./src/web/customattributes/main.php'",
     "prod:start:web:filters": "php ./bin/start --entry='./src/web/filters/main.php'",
+    "dev:start:web:filters": "php -dxdebug.mode=debug -dxdebug.start_with_request=yes ./bin/start --entry='./src/web/filters/main.php'",
     "prod:start:web:helloworld": "php ./bin/start --entry='./src/web/helloworld/main.php'",
     "prod:start:web:notfound": "php ./bin/start --entry='./src/web/notfound/main.php'",
     "prod:start:web:openapi": "php ./bin/start --entry='./src/web/openapi/main.php'",
