--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,18 @@
     "prod:start:web:params": "php  -dxdebug.mode=debug -dxdebug.start_with_request=yes ./bin/start --entry='./src/web/params/main.php'",
     "prod:start:web:session": "php ./bin/start --entry='./src/web/session/main.php'",
     "dev:precommit": "pre-commit install && pre-commit autoupdate",
+    "dev:tips": "[ ! -f catpaw.phar ] && echo '' || php catpaw.phar --tips",
     "download:catpaw": "[ ! -f catpaw.phar ] && wget https://github.com/tncrazvan/catpaw/releases/latest/download/catpaw.phar || echo ''",
     "download:psalm": "[ ! -f psalm.phar ] && wget https://github.com/vimeo/psalm/releases/latest/download/psalm.phar || echo ''",
     "post-autoload-dump": [
       "@download:psalm",
-      "@download:catpaw"
+      "@download:catpaw",
+      "@dev:tips"
     ],
     "post-create-project-cmd": [
       "@download:psalm",
-      "@download:catpaw"
+      "@download:catpaw",
+      "@dev:tips"
     ]
   },
   "authors": [
