chore(app): bump to catpaw 3.7

--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,18 @@
       "php -dxdebug.mode=off ./vendor/bin/php-cs-fixer fix src",
       "php -dxdebug.mode=off ./vendor/bin/php-cs-fixer fix tests"
     ],
-    "prod:start:helloworld": "php ./bin/start --entry='./src/helloworld/main.php'",
-    "prod:start:raspberrypi": "php ./bin/start --entry='./src/raspberrypi/main.php'",
-    "prod:start:readable": "php ./bin/start --entry='./src/readable/main.php'",
-    "prod:start:writable": "php ./bin/start --entry='./src/writable/main.php'",
-    "prod:start:web:byterange": "php ./bin/start --entry='./src/web/byterange/main.php'",
-    "prod:start:web:cats": "php ./bin/start --entry='./src/web/cats/main.php'",
-    "prod:start:web:customattributes": "php ./bin/start --entry='./src/web/customattributes/main.php'",
-    "prod:start:web:helloworld": "php ./bin/start --entry='./src/web/helloworld/main.php'",
-    "prod:start:web:notfound": "php ./bin/start --entry='./src/web/notfound/main.php'",
-    "prod:start:web:openapi": "php ./bin/start --entry='./src/web/openapi/main.php'",
-    "prod:start:web:params": "php ./bin/start --entry='./src/web/params/main.php'",
-    "prod:start:web:session": "php ./bin/start --entry='./src/web/session/main.php'",
+    "prod:start:helloworld": "php ./bin/start --main='./src/helloworld/main.php'",
+    "prod:start:raspberrypi": "php ./bin/start --main='./src/raspberrypi/main.php'",
+    "prod:start:readable": "php ./bin/start --main='./src/readable/main.php'",
+    "prod:start:writable": "php ./bin/start --main='./src/writable/main.php'",
+    "prod:start:web:byterange": "php ./bin/start --main='./src/web/byterange/main.php'",
+    "prod:start:web:cats": "php ./bin/start --main='./src/web/cats/main.php'",
+    "prod:start:web:customattributes": "php ./bin/start --main='./src/web/customattributes/main.php'",
+    "prod:start:web:helloworld": "php ./bin/start --main='./src/web/helloworld/main.php'",
+    "prod:start:web:notfound": "php ./bin/start --main='./src/web/notfound/main.php'",
+    "prod:start:web:openapi": "php ./bin/start --main='./src/web/openapi/main.php'",
+    "prod:start:web:params": "php ./bin/start --main='./src/web/params/main.php'",
+    "prod:start:web:session": "php ./bin/start --main='./src/web/session/main.php'",
     "dev:tips": "[ ! -f catpaw.phar ] && echo '' || php catpaw.phar --tips",
     "dev:install-pre-commit": "php catpaw.phar --install-pre-commit='composer prod:fix'",
     "download:catpaw": "[ ! -f catpaw.phar ] && wget https://github.com/tncrazvan/catpaw/releases/latest/download/catpaw.phar || echo ''",
